[package]
name = "pct"
version = "0.1.0"
authors = ["Tom French <hello@orseti.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tun-tap = "0.1.2"
etherparse = "0.9.0"

[build]
CARGO_TARGET_DIR = "/home/orseti/dev/rust/pct/target"
